Add a `retry` type to automatically re-attempt workflows
This adds a new type to workflows that allows a workflow to be automatically
restarted with different parameters. The goal would be to allow workflows that
fail to run with more memory or larger timeouts automatically.